[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://mods-unpacked/RampagingHippy-Archipelago/ui/menus/pages/menu_ap_connect.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=3]
[ext_resource path="res://mods-unpacked/RampagingHippy-Archipelago/ap_button_icon_disconnected.png" type="Texture" id=4]

[node name="MarginContainer" type="MarginContainer"]
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 768.0
margin_bottom = 1080.0
custom_constants/separation = 50
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 768.0
margin_bottom = 366.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 15.0
margin_right = 753.0
margin_bottom = 223.0
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2

[node name="HostLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 4.0
margin_right = 213.0
margin_bottom = 49.0
text = "Host:"

[node name="HostEdit" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 238.0
margin_right = 738.0
margin_bottom = 54.0
rect_min_size = Vector2( 500, 0 )
focus_neighbour_top = NodePath("../../../BackButton")
focus_next = NodePath("../PlayerEdit")
focus_previous = NodePath("../../../BackButton")
text = "archipelago.gg"
clear_button_enabled = true
placeholder_text = "IP/Address:Port"
caret_blink = true
caret_blink_speed = 0.5

[node name="PlayerLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 83.0
margin_right = 213.0
margin_bottom = 128.0
text = "Player:"

[node name="PlayerEdit" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 238.0
margin_top = 79.0
margin_right = 738.0
margin_bottom = 133.0
focus_next = NodePath("../HBoxContainer/PasswordEdit")
focus_previous = NodePath("../HostEdit")
clear_button_enabled = true
placeholder_text = "Player Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 168.0
margin_right = 213.0
margin_bottom = 213.0
text = "Password:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 238.0
margin_top = 158.0
margin_right = 738.0
margin_bottom = 223.0

[node name="PasswordEdit" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer/HBoxContainer"]
margin_right = 340.0
margin_bottom = 65.0
focus_neighbour_right = NodePath("../ShowPasswordButton")
focus_next = NodePath("../../../../ConnectButton")
focus_previous = NodePath("../../PlayerEdit")
size_flags_horizontal = 3
secret = true
clear_button_enabled = true
placeholder_text = "Leave empty if no password"
caret_blink = true
caret_blink_speed = 0.5

[node name="ShowPasswordButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 500.0
margin_bottom = 65.0
focus_neighbour_left = NodePath("../PasswordEdit")
focus_neighbour_bottom = NodePath("../../../../ConnectButton")
text = "Show"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 416.0
margin_right = 768.0
margin_bottom = 481.0
focus_next = NodePath("../DisconnectButton")
focus_previous = NodePath("../CenterContainer/GridContainer/HBoxContainer/PasswordEdit")
text = "Connect"

[node name="DisconnectButton" type="Button" parent="VBoxContainer"]
margin_top = 531.0
margin_right = 768.0
margin_bottom = 596.0
focus_next = NodePath("../BackButton")
focus_previous = NodePath("../ConnectButton")
text = "Disconnect"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 646.0
margin_right = 768.0
margin_bottom = 711.0
focus_neighbour_bottom = NodePath("../CenterContainer/GridContainer/HostEdit")
focus_previous = NodePath("../DisconnectButton")
text = "MENU_BACK"
script = ExtResource( 3 )

[node name="ConnectStatusLabel" type="Label" parent="VBoxContainer"]
margin_top = 761.0
margin_right = 768.0
margin_bottom = 806.0
text = "Connection Status"
align = 1

[node name="ConnectionErrorLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 811.0
margin_right = 768.0
margin_bottom = 856.0
custom_colors/font_color = Color( 0.756863, 0, 0, 1 )
text = "Connection Error"
align = 1

[node name="StatusTexture" type="TextureRect" parent="VBoxContainer"]
margin_top = 856.0
margin_right = 768.0
margin_bottom = 936.0
rect_pivot_offset = Vector2( 384, 40 )
texture = ExtResource( 4 )
stretch_mode = 4

[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/HBoxContainer/ShowPasswordButton" to="." method="_on_ShowPasswordButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
